--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -69,3 +69,21 @@ article:target {
   text-align: center;
   padding: 50px 0;
 }
+
+footer{
+  background: rgb(238,174,202);
+  background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
+  height: 120px;
+}
+
+#jumbotron{
+  /* background: blue no-repeat url("../images/blurred-bg.jpeg"); */
+  background-color: blue;
+  background-image: url("../images/blurred-bg.jpeg");
+  background-repeat: no-repeat;
+  background-size: cover;
+/*  background-origin: border-box; TODO:  */
+  height: 300px;
+  text-align: center;
+  padding: 160px 0;
+}
