--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -13,9 +13,31 @@ body{
   margin: 0;
 }
 
+
+/* util classes */
+.ml5{
+  margin-left: 5px !important;
+}
+
+.textCenter{
+  text-align: center !important;
+}
+
+/* header styles */
+header {
+  height: 90px;
+  display:flex;
+}
+
 /* Class Selector */
 .appLogoBox{
-  width: 100px;
+  width: 100px; 
+  margin: 10px 15px;
+}
+.primaryNav{
+  width: calc(100% - 130px);
+  padding-top:20px;
+  text-align: right;
 }
 
 .primaryNav ul li{
@@ -30,6 +52,11 @@ body{
   border: deepskyblue;
   font-size: 24px;
   padding: 10px 26px; /* top right bottom left  */
+}
+
+
+main{
+  border-top: 1px solid #ddd;
 }
 
 a{
@@ -68,14 +95,16 @@ article:target {
   background-color: rgba(0, 0, 0, 0.4);
   text-align: center;
   padding: 50px 0;
+  margin-top: 40px;
 }
 
 footer{
-  background: rgb(238,174,202);
+  background: rgb(238,174,202); 
   background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
   height: 120px;
 }
 
+/* home page styles */
 #jumbotron{
   /* background: blue no-repeat url("../images/blurred-bg.jpeg"); */
   background-color: blue;
@@ -87,3 +116,42 @@ footer{
   text-align: center;
   padding: 160px 0;
 }
+
+video{
+  box-shadow: 5px 5px 10px 4px #0044FF;
+  display: block;
+  margin: 0 auto;
+}
+
+
+#featureWrapper{
+  display: flex;
+}
+
+#featureWrapper .featureBox{
+  background: #efefef;
+  padding: 20px;
+  border-radius: 10px;
+  margin: 20px;
+  text-align: center;
+}
+
+#featureWrapper img{
+  border: 2px solid #9a9a9a;
+  border-radius: 50%;
+  width: 100px;
+}
+
+
+/*contact page related styles */
+.redText{
+  color: red !important;
+}
+
+.footerText{
+  color: brown;
+}
+
+/* about us page related styles */
+
+
