--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -159,7 +159,21 @@ video{
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
 
-  
+  .primaryNav{
+    display: none;
+  }
+
+  .menuCollapsed{
+    display:block;
+  }
+
+  #featureWrapper{
+    display: block;
+  }
+
+  #featureWrapper .featureBox{
+    display: block;
+  }
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
